2023. 3.30. Modified liwDLAPIListAdd to store the type-casted return value of liwDLSymbol in the api member of liwDLAPI. [liw_dl]
2023. 3.30. Modified liwSHMModeAttach to check the return value from shmat correctly. [liw_ipc]
2023. 3.30. Corrected type casting of the third argument of liwPActionRTCreate. [liw_paction]
2023. 3.29. Modified config.lib and config.tools for C++ compilation. [src, tools]
2022. 9. 4. Removed register keywords. [liw_dl, liw_coproc]
2022. 9. 3. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]
2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
2021. 6. 1. Modified allclean.sh in example to skip directories without makefile. [example]
2021. 5.30. Applied zeda-deb-gen. [makefile]
2021. 5.16. Reflected new specification of zSInt. [liw_time]
2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 8. Debugged app/makefile. [app]
2021. 5. 7. Made tools/, and modified makefiles. [zm, app, tools]
2021. 4.29. Modified app/makefile. [app]
2021. 4.29. Reflected new specification of zeda-config-gen. [app]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2019.11.22. Rewrote README as a markdown file. [README]
2019.10. 1. Enabled make uninstall. [makefile]
2019. 8. 8. Reflected renaming of zNameDestroy to zNameFree. [liw_dl]
2019. 6.18. Corrected makefile to check dependency (thanks to Naoki Wakisaka). [makefile]
2019. 6.13. Registered lib and some dot files for Git. [lib]
2018.12.12. Followed renaming of CURE to ZEDA. [all]
2018.11.16. Reflected removal of ZSYSERROR. [liw_ipc, liw_socket]
2018. 7. 9. Debugd liw_time. (by Naoki Wakisaka) [liw_time]
2015. 2. 9. Applied cure-config-gen. [app]
2015. 1. 7. Added liw-config. [app]
2015. 1. 6. Modified the type of id in liwPActionRT. [liw_paction]
2012. 2.27. Added liwSleep. [liw_timer]
2012. 2.27. Reimplemented liwPAction and liwPActionRT. [liw_paction]