@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.10
+VERSION=1.2.11
 
 DEPENDENCY="zeda=1.6.45"
 
